[package]
name = "mizer-project-files"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
regex = "1.10"
tracing = "0.1"
lazy_static = "1.4"
anyhow = "1"
mizer-console = { path = "../components/console" }
mizer-media = { path = "../components/media" }
mizer-node = { path = "../runtime/pipeline/node" }
mizer-nodes = { path = "../runtime/pipeline/nodes" }
mizer-layouts = { path = "../runtime/layouts" }
mizer-fixtures = { path = "../components/fixtures" }
mizer-sequencer = { path = "../components/sequencer" }
mizer-plan = { path = "../components/plan" }
mizer-timecode = { path = "../components/timecode" }
mizer-protocol-dmx = { path = "../components/connections/protocols/dmx" }
mizer-protocol-mqtt = { path = "../components/connections/protocols/mqtt" }
mizer-protocol-osc = { path = "../components/connections/protocols/osc" }
mizer-surfaces = { path = "../components/surfaces" }
directories-next = "2.0"
fs2 = "0.4"
indexmap = { version = "2.2", features = ["serde"] }
enum_dispatch = "0.3.13"
enum-iterator = "2.0"
profiling = "1.0"

[dev-dependencies]
test-case = "3.3"
mizer-pixel-nodes = { path = "../runtime/pipeline/nodes/pixels" }
