[package]
name = "mizer-runtime"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
debug-ui = ["mizer-debug-ui/compile"]

[dependencies]
anyhow = "1"
log = "0.4"
pinboard = "2.2"
dashmap = "5"
downcast = "0.11"
flume = "0.11"
mizer-clock = { path = "clock" }
mizer-debug-ui = { path = "debug-ui", optional = true }
mizer-node = { path = "pipeline/node" }
mizer-nodes = { path = "pipeline/nodes" }
mizer-fixtures = { path = "../components/fixtures" }
mizer-pipeline = { path = "pipeline" }
mizer-session = { path = "session" }
mizer-execution-planner = { path = "execution-planner" }
mizer-ports = { path = "pipeline/ports"}
mizer-processing = { path = "processing" }
mizer-project-files = { path = "../projects" }
mizer-module = { path = "module" }
mizer-layouts = { path = "layouts" }
mizer-plan = { path = "../components/plan" }
mizer-commander = { path = "commander" }
mizer-util = { path = "../util" }
profiling = "1.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-unwrap = "0.10"
itertools = "0.11"

[dev-dependencies]
insta = "1.30"
test-case = "3.1"
mizer-util = { path = "../util", features = ["test"] }
