[package]
name = "mizer-runtime"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
pinboard = "2.2"
dashmap = "5"
downcast = "0.11"
flume = "0.11"
mizer-clock = { path = "clock" }
mizer-debug-ui-impl = { path = "debug-ui/impl" }
mizer-node = { path = "pipeline/node" }
mizer-nodes = { path = "pipeline/nodes" }
mizer-fixtures = { path = "../components/fixtures" }
mizer-pipeline = { path = "pipeline" }
mizer-session = { path = "session" }
mizer-ports = { path = "pipeline/ports"}
mizer-processing = { path = "processing" }
mizer-project-files = { path = "../projects" }
mizer-module = { path = "module" }
mizer-layouts = { path = "layouts" }
mizer-plan = { path = "../components/plan" }
mizer-commander = { path = "commander" }
mizer-util = { path = "../util" }
mizer-docs = { path = "../../docs" }
mizer-status-bus = { path = "status" }
profiling = "1.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-unwrap = "1.0"
itertools = "0.12"
indexmap = "2.2"
enum-iterator = "2.0"

[dev-dependencies]
insta = "1.38"
test-case = "3.3"
mizer-util = { path = "../util", features = ["test"] }
