[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
tera = "1.20"
mizer = { path = "../mizer" }
mizer-command-executor = { path = "../runtime/commander/executor" }
mizer-nodes = { path = "../runtime/pipeline/nodes" }
mizer-node = { path = "../runtime/pipeline/node" }
mizer-fixtures = { path = "../components/fixtures" }
mizer-layouts = { path = "../runtime/layouts" }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1"
tracing = "0.1"
