[package]
name = "mizer-ui"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
mizer-api = { path = "../api" }
smol = "1.3"
nativeshell = { git = "https://github.com/maxjoehnk/nativeshell", rev = "bdff6f7" }
mizer-util = { path = "../util" }
mizer-ui-ffi = { path = "ffi" }
futures = "0.3"
pinboard = "2.2"
profiling = "1"

[build-dependencies]
nativeshell_build = { git = "https://github.com/maxjoehnk/nativeshell", rev = "bdff6f7" }

