[package]
name = "mizer-ui"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
mizer-api = { path = "../api" }
nativeshell = { git = "https://github.com/maxjoehnk/nativeshell", rev = "94a16e8" }
mizer-util = { path = "../util" }
mizer-ui-ffi = { path = "ffi" }
futures = "0.3.30"
pinboard = "2.2"
profiling = "1"

[build-dependencies]
nativeshell_build = { git = "https://github.com/maxjoehnk/nativeshell", rev = "94a16e8" }

