[package]
name = "mizer-util"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[features]
test = ["mizer-clock"]
tracing = ["profiling/profile-with-tracy", "tracy-client"]

[dependencies]
anyhow = "1"
tracing = "0.1"
mizer-clock = { path = "../runtime/clock", optional = true }
futures = "0.3"
palette = "0.7"
profiling = "1"
tracy-client = { version = "0.18", optional = true, features = ["sampling", "code-transfer", "system-tracing", "context-switch-tracing"] }
serde = { version = "1", features = ["derive", "rc"] }
bezier-rs = "0.4"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
indexmap = "2.2"
shellexpand = "3.1"
ringbuffer = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
test-case = "3.3"
