[package]
name = "mizer-video-nodes"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
mizer-node-api = { path = "../api" }
gstreamer = "0.16"
gstreamer-video = "0.16"
gstreamer-player = "0.16"
gstreamer-gl = "0.16"
glib = "0.10"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
