[package]
name = "mizer-protocol-laser"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
helios-dac = { version = "0.1", features = ["native"], default-features = false }
ether-dream = "0.2"
lasy = "0.4"
ilda-idtf = "0.1"
pinboard = "2.1"
