[package]
name = "mizer-pipeline"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1"
gstreamer = "0.16"
metrics = "0.14"
mizer-fixtures = { path = "../../components/fixtures" }
mizer-protocol-laser = { path = "../../protocols/laser" }
mizer-project-files = { path = "../projects" }
mizer-devices = { path = "../../components/devices" }
mizer-node = { path = "node" }
mizer-video-nodes = { path = "nodes/video" }
mizer-clock = { path = "../clock" }
mizer-ports = { path = "ports" }
mizer-processing = { path = "../processing" }
dashmap = "4"
flume = "0.10.1"
