[package]
name = "mizer-pipeline"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1"
gstreamer = "0.17"
metrics = "0.18"
mizer-fixtures = { path = "../../components/fixtures" }
mizer-protocol-laser = { path = "../../components/connections/protocols/laser" }
mizer-project-files = { path = "../projects" }
mizer-devices = { path = "../../components/connections/devices" }
mizer-node = { path = "node" }
mizer-video-nodes = { path = "nodes/video" }
mizer-clock = { path = "../clock" }
mizer-ports = { path = "ports" }
mizer-processing = { path = "../processing" }
mizer-util = { path = "../../util" }
dashmap = "4"
flume = "0.10"
ringbuffer = "0.8"
downcast = "0.11"
profiling = "1"
pinboard = "2.1"
tracing = "0.1"
tracing-unwrap = "0.9"

[dev-dependencies]
test-case = "2.2"
