[package]
name = "mizer-project-files"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
regex = "1.7"
log = "0.4"
lazy_static = "1.4"
anyhow = "1"
mizer-node = { path = "../pipeline/node" }
mizer-nodes = { path = "../pipeline/nodes" }
mizer-layouts = { path = "../layouts" }
mizer-fixtures = { path = "../../components/fixtures" }
mizer-sequencer = { path = "../../components/sequencer" }
mizer-plan = { path = "../../components/plan" }
mizer-protocol-dmx = { path = "../../components/connections/protocols/dmx" }
mizer-protocol-mqtt = { path = "../../components/connections/protocols/mqtt" }
mizer-protocol-osc = { path = "../../components/connections/protocols/osc" }
directories-next = "2.0"
fs2 = "0.4"
indexmap = { version = "1.9", features = ["serde"] }

[dev-dependencies]
test-case = "2.2"
mizer-pixel-nodes = { path = "../pipeline/nodes/pixels" }
