[package]
name = "mizer-ui-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "mizer_ui_ffi"
crate-type = ["cdylib", "lib"]

[dependencies]
pinboard = "2.1"
mizer-sequencer = { path = "../../components/sequencer" }
mizer-clock = { path = "../../runtime/clock" }
mizer-fixtures = { path = "../../components/fixtures" }
mizer-node = { path = "../../runtime/pipeline/node" }
mizer-runtime = { path = "../../runtime" }
lazy_static = "1.4"
parking_lot = "0.12"
