[package]
name = "mizer-devices"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "5"
log = "0.4"
mizer-protocol-laser = { path = "../protocols/laser" }
mizer-gamepads = { path = "./gamepads" }
mizer-module = { path = "../../../runtime/module" }
mizer-processing = { path = "../../../runtime/processing" }
tokio = { version = "1.23", features = ["sync", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
derive_more = "0.99"
